# backEnd/docs/swagger.json
@@ -805,11 +805,15 @@
         "models.OrderRequest": {
             "type": "object",
             "required": [
+                "deliveryID",
                 "productID",
                 "quantity",
                 "size"
             ],
             "properties": {
+                "deliveryID": {
+                    "type": "integer"
+                },
                 "productID": {
                     "type": "string"
                 },
